--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Gorditas&display=swap" rel="stylesheet">
-  <title>Lipstick</title>
+  <title>Hey, where'd you go?</title>
 </head>
 
 <body>
   <header class="header">Get free US standard shipping w/ $25+ Use Code: SHIP25</header>
 
-  <h4 class="products"><a href="/lipsticks">PRODUCTS</a></h4>
+  <h4 class="products"><a href="/lipsticks">Products</a></h4>
 
   <img src="" alt="">
   <img id="cloud" src="https://cdn130.picsart.com/279612132029211.png?type=webp&to=min&r=640" alt="purple">
@@ -26,10 +26,8 @@
       <h1>Lippie</h1>
       <!-- <p>About Us</p> -->
       <p>Hey, you look lost, come follow us. Inspired by fairytales and dreamy aesthetics in their own lives,
-        Michelle and
-        Elissa developed
-        their own unique brand of cruelty-free cosmetics for those who use makeup as an art form and everyday
-        expression.</p>
+        Michelle and Elissa developed their own unique brand of cruelty-free cosmetics for those who use makeup as an
+        art form and everyday expression.</p>
     </div>
     <button class="shop-now"><a href="/lipsticks">Shop Now</a></button>
 
@@ -50,7 +48,6 @@
     <h4>Affiliates</h4>
     <h4>Contact Us</h4>
     <h4>Shipping</h4>
-    <h4>Connect</h4>
     <h5>Sign up for emails to get 10% off your first order!</h5>
     <form action="#">
       <input class="email" type="text" placeholder="Email">
