--- a/views/lipsticks/lipstickIndex.ejs
+++ b/views/lipsticks/lipstickIndex.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/styles-index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet">
-    <title>Lipstick Names</title>
+    <title>Lipstick Index</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <li><a href="/users">Users</a></li>
             </ul>
         </nav>
-        <h1>Lipstick Names</h1>
+        <h1>Lipsticks</h1>
         <img id="pastel-lipsticks" src="https://i.pinimg.com/originals/fc/ca/3c/fcca3c31cd5426d1d8769b02572330ff.gif"
             alt="dancing lipsticks">
 
@@ -47,17 +47,19 @@
         </ul>
 
         <div class="info">
-            <h4>Contact</h4>
+            <h4>Careers</h4>
+            <h4>Affiliates</h4>
+            <h4>Contact Us</h4>
             <h4>Shipping</h4>
-            <h4>Connect</h4>
             <h5>Sign up for emails to get 10% off your first order!</h5>
             <form action="#">
-                <input type="text" placeholder="Email">
+                <input class="email" type="text" placeholder="Email">
             </form>
             <form action="#">
-                <input type="text" placeholder="Phone Number">
+                <input class="phone" type="text" placeholder="Phone Number">
             </form>
-            <button>Subscribe</button>
+            <button class="subscribe">Subscribe</button>
+
         </div>
 
 
