--- a/views/lipsticks/lipstickNew.ejs
+++ b/views/lipsticks/lipstickNew.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/styles-new.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&display=swap" rel="stylesheet">
-  <title>New Lipstick</title>
+  <title>Create Your Own Lipstick</title>
 </head>
 
 <body>
@@ -63,20 +63,21 @@
   <img id="purple-cloud2" src="/purple-cloud2.png" alt="purple-cloud">
   <img id="white-cloud" src="https://i.pinimg.com/originals/96/16/71/961671a0d15c33d419b8364e1345ccd2.png" alt="">
   <img id="pink-cloud" src="https://i1.wp.com/cdn140.picsart.com/278518386003211.png" alt="">
-  
+
 
   <div class="info">
-    <h4><a href="#">Contact</a></h4>
-    <h4>Shipping</a></h4>
-    <h4>Connect</a></h4>
+    <h4>Careers</h4>
+    <h4>Affiliates</h4>
+    <h4>Contact Us</h4>
+    <h4>Shipping</h4>
     <h5>Sign up for emails to get 10% off your first order!</h5>
     <form action="#">
-      <input type="text" placeholder="Email">
+      <input class="email" type="text" placeholder="Email">
     </form>
     <form action="#">
-      <input type="text" placeholder="Phone Number">
+      <input class="phone" type="text" placeholder="Phone Number">
     </form>
-    <button>Subscribe</button>
+    <button class="subscribe">Subscribe</button>
 
   </div>
 
