--- a/public/styles-index.css
+++ b/public/styles-index.css
@@ -3,10 +3,13 @@ header  {
   text-align: center;
   padding: 10px;
   font-family: 'Gothic A1', sans-serif;
+  font-style: italic;
+  width: 100%;
+  margin-top: -10px;
 }
 
 nav {
-  width: 95vw;
+  width: 100%;
   padding: 0;
   margin: 0;
 }
@@ -15,7 +18,6 @@ nav ul {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
-  /* background-color: #DEBFA0; */
   background-color: #DCDAF2;
 }
 
@@ -64,6 +66,9 @@ h1 {
   border-radius: 5px;
 }
 
+.subscribe {
+  margin: 10px;
+}
 
 #followtext {
   display: block;
@@ -83,4 +88,9 @@ h1 {
 
 .delete {
   margin: 0 5px;
+  border-radius: 8px;
+}
+
+.edit {
+  border-radius: 8px;
 }
