--- a/public/styles-new.css
+++ b/public/styles-new.css
@@ -3,10 +3,13 @@ header  {
   padding: 10px;
   font-family: 'Gothic A1', sans-serif;
   text-align: center;
+  font-style: italic;
+  margin-top: -10px;
+  width: 100%;
 }
 
 nav {
-  width: 95vw;
+  width: 100%;
   padding: 0;
   margin: 0;
 }
@@ -60,7 +63,6 @@ nav ul {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
-  /* background-color: #DEBFA0; */
   background-color: #DCDAF2;
 }
 
