--- a/public/styles-userCart.css
+++ b/public/styles-userCart.css
@@ -3,10 +3,13 @@ header  {
   text-align: center;
   padding: 10px;
   font-family: 'Gothic A1', sans-serif;
+  font-style: italic;
+  margin-top: -10px;
+  width: 100%;
 }
 
 nav {
-  width: 95vw;
+  width: 100%;
   padding: 0;
   margin: 0;
 }
@@ -61,4 +64,8 @@ body {
 #social {
   width: 136px;
   height: 58px;
+}
+
+.subscribe {
+  margin: 10px;
 }
