--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,14 @@ header  {
   background-color: #DEA0A0;
   padding: 10px;
   font-family: 'Gothic A1', sans-serif;
-  font-weight: bolder;
+  font-weight: bold;
+  font-style: italic;
+  margin-top: -20px;
+  text-align: center;
+}
+
+.products {
+  font-family: 'Gothic A1', sans-serif;
 }
 
 #cloud {
@@ -54,13 +61,19 @@ p {
 .collage {
   border: solid white 5px;
   border-radius: 5px;
-  margin: 130px;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  width: 100%;
 }
 
 .seen {
-  border: solid white 5px;
+  border: solid #DEA0A0 5px;
   border-radius: 5px;
-  margin: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  width: 100%;
 }
 
 .info {
@@ -139,4 +152,5 @@ margin-bottom: 10px;
 
 .shop-now {
   padding: 5px;
+  border-radius: 8px;
 }
