--- a/views/users/addShoppingCart.ejs
+++ b/views/users/addShoppingCart.ejs
@@ -42,24 +42,26 @@
         </ul>
 
         <div class="info">
-            <h4><a href="#">Contact</a></h4>
-            <h4>Shipping</a></h4>
-            <h4>Connect</a></h4>
+            <h4>Careers</h4>
+            <h4>Affiliates</h4>
+            <h4>Contact Us</h4>
+            <h4>Shipping</h4>
             <h5>Sign up for emails to get 10% off your first order!</h5>
             <form action="#">
-                <input type="text" placeholder="Email">
+                <input class="email" type="text" placeholder="Email">
             </form>
             <form action="#">
-                <input type="text" placeholder="Phone Number">
+                <input class="phone" type="text" placeholder="Phone Number">
             </form>
-            <button>Subscribe</button>
+            <button class="subscribe">Subscribe</button>
+
         </div>
-    
+
         <footer class="followus">
             <h4 id="followtext">Follow Us</h4>
             <img id="social" src="/socialMedia.png" alt="social media icons">
         </footer>
-    
+
 
     </main>
 </body>
