--- a/views/users/userShow.ejs
+++ b/views/users/userShow.ejs
@@ -18,12 +18,12 @@
     <header class="header">Get free US standard shipping w/ $25+ Use Code: SHIP25</header>
     <nav>
         <ul>
-          <li class="lip-home"><a href="/">Home</a></li>
-          <li class="lip-list"><a href="/lipsticks">Products</a></li>
-          <li><a href="/lipsticks/new">Create New Lipstick</a></li>
-          <li><a href="/users">Users</a></li>
+            <li class="lip-home"><a href="/">Home</a></li>
+            <li class="lip-list"><a href="/lipsticks">Products</a></li>
+            <li><a href="/lipsticks/new">Create New Lipstick</a></li>
+            <li><a href="/users">Users</a></li>
         </ul>
-      </nav>
+    </nav>
 
     <main>
         <div class="lip-show">
@@ -31,36 +31,39 @@
                 <%= user.name %>'s Shopping Bag
             </h1>
             <a href="/users/<%=user.id%>/shoppingCart">Modify your shopping cart</a>
-           
+
         </div>
-        
-        <% for (let i = 0; i < user.shoppingCart.length; i++) { %>
-          <li>
-            <a href="/lipsticks/<%= user.shoppingCart[i]._id %>">
-              <%= user.shoppingCart[i].lipstickName %>
-            </a> 
-            <form style="display: inline" action="/users/<%= user.id %>/shoppingCart/delete/<%= user.shoppingCart[i]._id %>">
-                
-                <button type="submit">Delete</button>
-            </form>
-          </li>
-        <% } %>
+
+        <% for (let i=0; i < user.shoppingCart.length; i++) { %>
+            <li class="shopping-cart">
+                <a href="/lipsticks/<%= user.shoppingCart[i]._id %>">
+                    <%= user.shoppingCart[i].lipstickName %>
+                </a>
+                <form style="display: inline"
+                    action="/users/<%= user.id %>/shoppingCart/delete/<%= user.shoppingCart[i]._id %>">
+
+                    <button type="submit">Delete</button>
+                </form>
+            </li>
+            <% } %>
 
     </main>
 
 
     <div class="info">
-        <h4><a href="#">Contact</a></h4>
-        <h4>Shipping</a></h4>
-        <h4>Connect</a></h4>
+        <h4>Careers</h4>
+        <h4>Affiliates</h4>
+        <h4>Contact Us</h4>
+        <h4>Shipping</h4>
         <h5>Sign up for emails to get 10% off your first order!</h5>
         <form action="#">
-            <input type="text" placeholder="Email">
+            <input class="email" type="text" placeholder="Email">
         </form>
         <form action="#">
-            <input type="text" placeholder="Phone Number">
+            <input class="phone" type="text" placeholder="Phone Number">
         </form>
-        <button>Subscribe</button>
+        <button class="subscribe">Subscribe</button>
+
     </div>
 
     <footer class="followus">
